frontend/src/component/SpotIndexItem/SpotIndexItem.css
.spot-item {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 10px;
}

.buttons-container {
    display: flex;
  }

  .update-button
 {
  margin-left: 10px; /* Adjust the margin as needed */
  border: 1px solid #ddd;
  padding: 10px;
  margin-bottom: 10px;
}

.spotIndexContainer a {
    text-decoration: none;
    display: flex;
  justify-content: space-between;
  align-items: center;
}

.spot-item div {
    margin:5px;
}

.spot-name {
    visibility: hidden;
    text-align: center;
}


.spot-tile {
    position: relative;
}

.spot-name {
    visibility: hidden;
    width: 120px;
    background-color: #333;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    z-index: 1;
    /* bottom: 125%;
    left: 50%;
    transform: translateX(-50%);
    opacity: 0;
    transition: opacity 0.3s; */
}

img {
        max-width: 100%; /* Ensure the image does not exceed the container width */
        height: auto; /* Maintain the image's aspect ratio */
        display: block; /* Remove extra spacing below inline images */
        margin: 0 auto; /* Center the image within its container */
}

  .spot-tile:hover .spot-name {
    visibility: visible;
    opacity: 1;
  }

